--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "<!--\r **MarcoMadera/MarcoMadera** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.",
   "main": "index.js",
   "scripts": {
+    "update-readme": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
