--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,9 +1,14 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Update README.md
 
 on:
+  push:
+    branches:
+      - master
+  workflow_dispatch:
+  
   schedule:
     - cron: "0 */2 * * *"
 
@@ -24,5 +29,3 @@ jobs:
         git add README.md
         git diff --quiet && git diff --staged --quiet || git commit -m "[bot] Update README"
         git push origin master
-          
-    
